Working on VCR - MSCR demonstration